<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginRegisterActivity"
    android:background="@color/main_page_color">

    <ImageView
        android:id="@+id/KeyStoreLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:contentDescription="@string/keystore_logo_description"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/logokeystore" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="501dp"
        android:contentDescription="@string/user_icon_description"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:srcCompat="@drawable/user_icon" />



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_account_options"
        android:layout_width="317dp"
        android:layout_height="62dp"
        android:layout_marginTop="698dp"
        android:background="@drawable/btn_register"
        android:text="@string/Register"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_account_options"
        android:layout_width="317dp"
        android:layout_height="62dp"
        android:layout_marginTop="597dp"
        android:background="@drawable/btn_login"
        android:text="@string/login"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        />


    <TextView
        android:id="@+id/textGuest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginTop="700dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Guest"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent" />

</FrameLayout>
