<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/CreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="74dp"
        android:text="@string/Create_Account"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/blueish_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/EmailAddress"
        android:layout_width="329dp"
        android:layout_height="48dp"
        android:layout_marginTop="128dp"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:background="@drawable/login_register_field"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="329dp"
        android:layout_height="48dp"
        android:layout_marginTop="199dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:background="@drawable/login_register_field"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ConfirmPassword"
        android:layout_width="329dp"
        android:layout_height="48dp"
        android:layout_marginTop="270dp"
        android:ems="10"
        android:hint="@string/Confirm_password"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:background="@drawable/login_register_field"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/FirstName"
        android:layout_width="329dp"
        android:layout_height="48dp"
        android:layout_marginTop="341dp"
        android:ems="10"
        android:hint="@string/First_Name"
        android:autofillHints="name"
        android:inputType="text"
        android:background="@drawable/login_register_field"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/LastName"
        android:layout_width="329dp"
        android:layout_height="48dp"
        android:layout_marginTop="412dp"
        android:ems="10"
        android:hint="@string/Last_Name"
        android:autofillHints="name"
        android:inputType="text"
        android:background="@drawable/login_register_field"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/PhoneNumber"
        android:layout_width="329dp"
        android:layout_height="48dp"
        android:layout_marginTop="483dp"
        android:ems="10"
        android:hint="@string/Phone_Number"
        android:autofillHints="phone"
        android:inputType="phone"
        android:background="@drawable/login_register_field"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/BrithDate"
        android:layout_width="329dp"
        android:layout_height="48dp"
        android:layout_marginTop="554dp"
        android:ems="10"
        android:hint="@string/Birth_Date"
        android:autofillHints="birthday"
        android:inputType="date"
        android:background="@drawable/login_register_field"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="801dp"
        android:text="@string/Cancel"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="317dp"
        android:layout_height="62dp"
        android:layout_marginTop="716dp"
        android:background="@drawable/btn_login"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>